--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -87,6 +87,7 @@ endpoints:
 
 ---
 hibernate:
+    dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     cache:
         queries: false
         use_second_level_cache: false
@@ -94,15 +95,15 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+    driverClassName: com.mysql.jdbc.Driver
+    username: concot
+    password: concot
 
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: create
+            url: jdbc:mysql://localhost:3306/concot
     test:
         dataSource:
             dbCreate: update
